fixed text-align

--- a/src/Component/Search/SearchResults/SearchResults.css
+++ b/src/Component/Search/SearchResults/SearchResults.css
@@ -1,5 +1,6 @@
 .Table {
   font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
 }
 
 h6 {
@@ -9,8 +10,10 @@ h6 {
 @media (max-width: 380px) {
   .Table {
     overflow: scroll;
+    text-align: center;
   }
   .table {
     overflow: scroll;
+    text-align: center;
   }
 }
